      static method exit : int ($status : int);
      static method pipe : int ($pipe_fds : int[]);
      static method getpgid : int ($pid : int);
      static method setpgid : int ($pid : int, $pgid : int);
      static method getpid : int ();
      static method getppid : int ();
      static method exec : int ($path : string, $args : string[]);

    * Added the Sys::OS class.
    * Added the Sys::Env class.
0.42 2022-02-21
  [Prerequirement Changes]
    * SPVM 0.9692+ is needed.
  [Incompatible Changes]
    * The $base_time argument is removed in the A, C, M method in the Sys::IO::Stat and Sys::FileTest.
0.41 2022-02-17
  [Incompatible Changes]
    * The x and X method in the Sys::FileTest class doesn't check the file extension on Windows.
  [Bug Fix]
    * Fixed link errors of Sys::Socket::Ip_mreq and Sys::Socket::Ipv6_mreq.
0.40 2022-02-17
  [Incompatible Changes]
    * Renamed the eaccess_emulate in the Sys::IO class to eaccess.
    * Renamed the eaccess_emulate_raw in the Sys::IO class to eaccess_raw.
    * The z method in the Sys::FileTest method throw an exception when the file doesn't exist.
  [New Features]
    * Added the following methods to the Sys::IO::Stat class.
      method A : double ($base_time : long);
      method C : double ($base_time : long);
      method M : double ($base_time : long);
      method O : int ();
      method S : int ();
      method b : int ();
      method c : int ();
      method d : int ();
      method d : int ();
      method e : int ();
      method f : int ();
      method g : int ();
      method k : int ();
      method l : int ();
      method o : int ();
      method p : int ();
      method s : long ();
      method u : int ();
      method z : int ();
      method cando : int ($mode : int, $effective : int);
      method r : int ();
      method w : int ();
      method x : int ();
      method R : int ();
      method W : int ();
      method X : int ();
